--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Simon Says Game</title>
   </head>
   <body>
-
     <h1>Simon Says Game</h1>
-    <h2>Click Out Side Of The Box To Start</h2>
+    <h2>Press any key to start the game</h2>
     <h3></h3>
     <div class="container">
       <div class="line-one">
