--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       </div>
     </div>
 
+    <button id="instruction">How To Play?</button>
+    <div id="info-container">
+    <p id="info">To beat the Simon game, players need to remember the color pattern and repeat it by pressing the colored buttons on the game unit in the correct order. It starts off at a rather steady pace, but the more you play, the more complicated the patterns become, building suspense with each turn.</p>
+  </div>
     <script src="main.js"></script>
   </body>
 </html>
